--- a/android_projs/AdvandedAndroidProj/AndroidManifest.xml
+++ b/android_projs/AdvandedAndroidProj/AndroidManifest.xml
@@ -5,10 +5,12 @@
     android:versionName="1.0" >
 
     <!-- this is what my app started with but, to continue with the demos, changing to minSdkVersion = 11 -->
-    <!--  android:minSdkVersion="8" -->
-    
+    <!-- android:minSdkVersion="8" -->
+
+   <!-- started to go to min api version 16 to support notification demo that uses TaskStackBuilder -->
+   <!-- android:minSdkVersion="11" -->
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
     <application
@@ -16,7 +18,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name="com.example.advandedandroidproj.AdvancedMainActivity"
             android:label="@string/app_name" >
@@ -27,6 +28,11 @@
             </intent-filter>
         </activity>
         
+        <!-- this is for notification demo samples... -->
+        <activity
+            android:name="com.example.advandedandroidproj.NotificationViewActivity"
+            android:label="@string/title_activity_notification_view" >
+        </activity>
     </application>
 
 </manifest>
