--- a/android_projs/AdvandedAndroidProj/AndroidManifest.xml
+++ b/android_projs/AdvandedAndroidProj/AndroidManifest.xml
@@ -11,13 +11,13 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    
+
     <!-- allows to send sms msgs... -->
     <uses-permission android:name="android.permission.SEND_SMS" />
-    
+
     <!-- this is used for using phone app in the phone with intent. -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    
+
     <!-- used for google play svcs with activity -->
 
 
@@ -67,11 +67,15 @@
             android:name="com.example.advandedandroidproj.LocationBasedDemoActivity"
             android:label="@string/title_activity_location_based_demo" >
         </activity>
-        
+
         <!-- this will do the sms demo stuff. -->
         <activity
             android:name="com.example.advandedandroidproj.SmsDemoActivity"
             android:label="@string/title_activity_sms_demo" >
+        </activity>
+        <activity
+            android:name="com.example.advandedandroidproj.FileIOActivity"
+            android:label="@string/title_activity_file_io" >
         </activity>
     </application>
 
