--- a/android_projs/NBCAndroidCommonFramework/.classpath
+++ b/android_projs/NBCAndroidCommonFramework/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="/greenDaoJarFiles/greendao-1.3.7.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
