--- a/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
+++ b/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <!-- allow the app to access the network from the phone. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.util.nbc_network_layer.NetworkContentService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
