--- a/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
+++ b/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <!-- allow the app to access the network from the phone. -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
