--- a/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
+++ b/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.util.nbc_cmn_framework_UT.MainUTActivity"
+            android:name="com.util.mydao_cmn_framework_UT.MainUTActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
         </activity>
 
         <service
-            android:name="com.util.nbc_network_layer.NetworkContentService"
+            android:name="com.util.mydao_network_layer.NetworkContentService"
             android:enabled="true"
             android:exported="true" >
         </service>
