--- a/android_projs/NBCAndroidCommonFramework/.project
+++ b/android_projs/NBCAndroidCommonFramework/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NBC_Common_Framework</name>
+	<name>MyDao_Common_Framework</name>
 	<comment></comment>
 	<projects>
 	</projects>
