--- a/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
+++ b/android_projs/NBCAndroidCommonFramework/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.util.nbc_common_framework"
+    package="com.util.mydao_common_framework"
     android:versionCode="1"
     android:versionName="1.0" >
 
