--- a/java_code/.classpath
+++ b/java_code/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="libs/javax.json-1.0.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-api-2.0.2.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-core-2.0.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
