--- a/android_studio_proj/MyAppAndroid2/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/AndroidManifest.xml
@@ -35,6 +35,13 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <!-- needed for ringtone mgr to play.-->
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+    <!-- allows for bluetooth permissions and data xref-->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <!-- turn on blue tooth device.-->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
