added code for location and maps.

--- a/android_studio_proj/MyAppAndroid2/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
     <!-- turn on blue tooth device.-->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
+    <!-- used for location and gps for permissions.-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
