--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".MyWeatherApplication">
+
         <activity
             android:name=".MainWeatherActivity"
             android:label="@string/app_name" >
