--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".activitypkg.MainWeatherActivity"
             android:label="@string/app_name" >
@@ -27,6 +26,12 @@
             android:name=".networklayer.NetworkIntentSvc"
             android:exported="false" >
         </service>
+
+        <!-- handles the current weather displaying of data for a city. -->
+        <activity
+            android:name=".activitypkg.CurrentWeatherActivity"
+            android:label="@string/title_activity_current_weather" >
+        </activity>
 
     </application>
 
