added new activity to have seach ui with a list view below. added fragment to perform the list view processing do the weather retrieval.

--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -32,7 +32,10 @@
             android:name=".activitypkg.CurrentWeatherActivity"
             android:label="@string/title_activity_current_weather" >
         </activity>
-
+        <activity
+            android:name=".activitypkg.CitySearchActivity"
+            android:label="@string/title_activity_city_search" >
+        </activity>
     </application>
 
 </manifest>
