renamed packages and added math utils class for processing.

--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <!-- added this service component for background processing. -->
         <service
-            android:name=".networklayer.NetworkIntentSvc"
+            android:name=".networkpkg.NetworkIntentSvc"
             android:exported="false" >
         </service>
 
