added new activity to display weather station data. renamed files and updated code.

--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".activitypkg.CitySearchActivity"
             android:label="@string/title_activity_city_search" >
         </activity>
+        <activity
+            android:name=".activitypkg.WeatherStationDisplayActivity"
+            android:label="@string/title_activity_weather_station_display" >
+        </activity>
     </application>
 
 </manifest>
