added open weather map 3rd party sdk for easy retreival of weather map data to lib folder. added hooks to process this data objs to allow for getting daily/hourly weather forecast.

--- a/android_studio_proj/MyWeatherApp/app/build.gradle
+++ b/android_studio_proj/MyWeatherApp/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile files('src/libs/greendao-2.0.0.jar')
+    compile files('src/libs/owm-japis-2.5.0.3.jar')
 }
