added new activity to display the daily/hourly weather forecast.

--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".activitypkg.WeatherStationDisplayActivity"
             android:label="@string/title_activity_weather_station_display" >
         </activity>
+        <activity
+            android:name=".activitypkg.DailyWeatherForecastActivity"
+            android:label="@string/title_activity_daily_weather_forecast" >
+        </activity>
     </application>
 
 </manifest>
