--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activitypkg.MainWeatherActivity"
-            android:label="@string/app_name" >
+            android:name=".activitypkg.CitySearchActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,19 +31,23 @@
         <!-- handles the current weather displaying of data for a city. -->
         <activity
             android:name=".activitypkg.CurrentWeatherActivity"
-            android:label="@string/title_activity_current_weather" >
+            android:label="@string/title_activity_current_weather"
+            android:screenOrientation="portrait">
         </activity>
-        <activity
-            android:name=".activitypkg.CitySearchActivity"
-            android:label="@string/title_activity_city_search" >
-        </activity>
+        <!--<activity-->
+            <!--android:name=".activitypkg.CitySearchActivity"-->
+            <!--android:label="@string/title_activity_city_search"
+            android:screenOrientation="portrait">-->
+        <!--</activity>-->
         <activity
             android:name=".activitypkg.WeatherStationDisplayActivity"
-            android:label="@string/title_activity_weather_station_display" >
+            android:label="@string/title_activity_weather_station_display"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".activitypkg.DailyWeatherForecastActivity"
-            android:label="@string/title_activity_daily_weather_forecast" >
+            android:label="@string/title_activity_daily_weather_forecast"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
