--- a/android_studio_proj/MyWeatherApp/app/build.gradle
+++ b/android_studio_proj/MyWeatherApp/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile files('src/libs/greendao-2.0.0.jar')
     compile files('src/libs/owm-japis-2.5.0.3.jar')
+    compile 'com.google.android.gms:play-services-ads:7.8.0'
 }
