--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <!-- allow the app to access the network from the phone. -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".MyWeatherApplication"
@@ -11,10 +12,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!--This meta-data tag is required to use Google Play Services.-->
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <activity
             android:name=".activitypkg.CitySearchActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,23 +36,33 @@
         <activity
             android:name=".activitypkg.CurrentWeatherActivity"
             android:label="@string/title_activity_current_weather"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
-        <!--<activity-->
-            <!--android:name=".activitypkg.CitySearchActivity"-->
-            <!--android:label="@string/title_activity_city_search"
-            android:screenOrientation="portrait">-->
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".activitypkg.CitySearchActivity" -->
+        <!--
+            android:label="@string/title_activity_city_search"
+            android:screenOrientation="portrait">
+        -->
+        <!-- </activity> -->
         <activity
             android:name=".activitypkg.WeatherStationDisplayActivity"
             android:label="@string/title_activity_weather_station_display"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activitypkg.DailyWeatherForecastActivity"
             android:label="@string/title_activity_daily_weather_forecast"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
-    </application>
+        <activity
+            android:name=".activitypkg.HourlyWeatherActivity"
+            android:label="@string/title_activity_hourly_weather" >
+        </activity>
 
+        <!--Include the AdActivity configChanges and theme. -->
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
+    </application>
 </manifest>
