--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".MyWeatherApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/weather"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <!--This meta-data tag is required to use Google Play Services.-->
