--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -16,12 +16,11 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".activitypkg.CitySearchActivity"
+            android:name=".activitypkg.MainWeatherActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,13 +37,13 @@
             android:label="@string/title_activity_current_weather"
             android:screenOrientation="portrait" >
         </activity>
-        <!-- <activity -->
-        <!-- android:name=".activitypkg.CitySearchActivity" -->
-        <!--
+
+        <activity
+            android:name=".activitypkg.CitySearchActivity"
             android:label="@string/title_activity_city_search"
             android:screenOrientation="portrait">
-        -->
-        <!-- </activity> -->
+        </activity>
+
         <activity
             android:name=".activitypkg.WeatherStationDisplayActivity"
             android:label="@string/title_activity_weather_station_display"
