--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".activitypkg.MainWeatherActivity"
+            android:name=".activitypkg.CitySearchActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -38,11 +38,11 @@
             android:screenOrientation="portrait" >
         </activity>
 
-        <activity
-            android:name=".activitypkg.CitySearchActivity"
-            android:label="@string/title_activity_city_search"
-            android:screenOrientation="portrait">
-        </activity>
+        <!--<activity-->
+            <!--android:name=".activitypkg.CitySearchActivity"-->
+            <!--android:label="@string/title_activity_city_search"-->
+            <!--android:screenOrientation="portrait">-->
+        <!--</activity>-->
 
         <activity
             android:name=".activitypkg.WeatherStationDisplayActivity"
