--- a/android_studio_proj/MyWeatherApp/app/build.gradle
+++ b/android_studio_proj/MyWeatherApp/app/build.gradle
@@ -22,8 +22,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('src/libs/greendao-2.0.0.jar')
-    compile files('src/libs/owm-japis-2.5.0.3.jar')
     compile 'com.google.android.gms:play-services-ads:7.8.0'
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile files('src/libs/greendao-2.0.0.jar')
+    compile files('src/libs/joda-time-2.8.2.jar')
 }
