--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -4,7 +4,13 @@
 
     <!-- allow the app to access the network from the phone. -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".MyWeatherApplication"
@@ -12,15 +18,19 @@
         android:icon="@mipmap/weather"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <!--This meta-data tag is required to use Google Play Services.-->
-        <meta-data android:name="com.google.android.gms.version"
+
+        <!-- This meta-data tag is required to use Google Play Services. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".activitypkg.CitySearchActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,11 +48,11 @@
             android:screenOrientation="portrait" >
         </activity>
 
-        <!--<activity-->
-            <!--android:name=".activitypkg.CitySearchActivity"-->
-            <!--android:label="@string/title_activity_city_search"-->
-            <!--android:screenOrientation="portrait">-->
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".activitypkg.CitySearchActivity" -->
+        <!-- android:label="@string/title_activity_city_search" -->
+        <!-- android:screenOrientation="portrait"> -->
+        <!-- </activity> -->
 
         <activity
             android:name=".activitypkg.WeatherStationDisplayActivity"
@@ -59,9 +69,27 @@
             android:label="@string/title_activity_hourly_weather" >
         </activity>
 
-        <!--Include the AdActivity configChanges and theme. -->
-        <activity android:name="com.google.android.gms.ads.AdActivity"
+        <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".activitypkg.WeatherStationMapsActivity"
+            android:label="@string/title_activity_weather_station_maps" >
+        </activity>
     </application>
+
 </manifest>
