added google maps api key for debug and release of of xml files. updated manifest to contain debug api key for google maps.

--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -48,12 +48,6 @@
             android:screenOrientation="portrait" >
         </activity>
 
-        <!-- <activity -->
-        <!-- android:name=".activitypkg.CitySearchActivity" -->
-        <!-- android:label="@string/title_activity_city_search" -->
-        <!-- android:screenOrientation="portrait"> -->
-        <!-- </activity> -->
-
         <activity
             android:name=".activitypkg.WeatherStationDisplayActivity"
             android:label="@string/title_activity_weather_station_display"
@@ -82,9 +76,11 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
+        <!--api key being used here is for google maps debug api key..for release use
+            release/res/value/google_maps_api.xml with that key..for publishing to app store.-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyAJ7QO_CLPM3-kfAx1R_SJ3fOgOruiTKg4" />
 
         <activity
             android:name=".activitypkg.WeatherStationMapsActivity"
