--- a/android_studio_proj/MyWeatherApp/app/build.gradle
+++ b/android_studio_proj/MyWeatherApp/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.1.0'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'com.jjoe64:graphview:4.0.1'
     //compile 'com.google.android.gms:play-services-analytics:8.1.0'
 }
