updated code to allow for google analytics in the app.

--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -62,11 +62,15 @@
             android:label="@string/title_activity_hourly_weather" >
         </activity>
 
+        <!--google admob specifics -->
         <!-- Include the AdActivity configChanges and theme. -->
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+        <!--google admob specifics -->
+
+        <!--google maps specifics -->
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -75,6 +79,7 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
+
         <!--
             api key being used here is for google maps debug api key..for release use
             release/res/value/google_maps_api.xml with that key..for publishing to app store.
@@ -82,6 +87,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAJ7QO_CLPM3-kfAx1R_SJ3fOgOruiTKg4" />
+        <!--google maps specifics -->
 
         <activity
             android:name=".activitypkg.WeatherStationMapsActivity"
@@ -89,6 +95,36 @@
         </activity>
         <activity android:name=".activitypkg.HourlyGraphActivity" >
         </activity>
+
+        <!--google analytics specific services -->
+        <!-- Add the following meta-data for devices running Google Play service. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <!-- Optionally, register AnalyticsReceiver and AnalyticsService to support background
+             dispatching on non-Google Play devices -->
+        <receiver android:name="com.google.android.gms.analytics.AnalyticsReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
+            </intent-filter>
+        </receiver>
+        <service android:name="com.google.android.gms.analytics.AnalyticsService"
+            android:enabled="true"
+            android:exported="false"/>
+
+        <!-- Optionally, register CampaignTrackingReceiver and CampaignTrackingService to enable
+             installation campaign reporting -->
+        <receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.vending.INSTALL_REFERRER" />
+            </intent-filter>
+        </receiver>
+        <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
+        <!--google analytics specific services -->
+
     </application>
 
 </manifest>
