updated amt of data to show and graph for 3hr data display. changed the rotation to portrait for hourly graph activity

--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -96,7 +96,7 @@
 
         <activity android:name=".activitypkg.HourlyGraphActivity"
                   android:label="@string/graph_hourly"
-                  android:screenOrientation="landscape">
+                  android:screenOrientation="portrait">
         </activity>
 
         <!--google analytics specific services -->
